base for send message
